src/test/deca/context/invalid/provided/testi07.deca
//Resultats :
//Erreur contextuelle
//Ligne 8 : returntype of the child is not a subtype of the parent's
class A{
    int methody(boolean a){}
}
class B extends A{
    float methody(boolean a){}
}